--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,7 @@
 }
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Candara, 'Segoe UI', Tahoma, sans-serif;
 }
 
 body {
@@ -27,6 +26,14 @@ p {
 }
 .title {
   font-size: clamp(4rem, 9vw, 14rem);
+  font-weight: 800;
+  padding: 0rem 1rem;
+}
+
+.subtitle {
+  font-size: clamp(2rem, 3.5vw, 5rem);
+  margin: 11rem 0rem 6rem 0rem;
+  font-style: italic;
 }
 
 .h2 {
@@ -74,6 +81,7 @@ p {
   padding: 1rem 1.5rem;
   transition: 0.4s ease-in-out;
   margin-left: 1rem;
+  font-family: Candara, 'Segoe UI', Tahoma, sans-serif;
 }
 
 .btn:hover {
