--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,11 @@
 }
 
 html {
-  font-family: Candara, 'Segoe UI', Tahoma, sans-serif;
+  font-family: 'Segoe UI', Tahoma, sans-serif;
 }
 
 body {
-  background-color: #cc0033;
+  background-color: #c80536;
 }
 
 a {
@@ -23,11 +23,11 @@ h3,
 h4,
 p {
   color: white;
+  font-family: inherit;
 }
 .title {
   font-size: clamp(4rem, 9vw, 14rem);
   font-weight: 800;
-  padding: 0rem 1rem;
 }
 
 .subtitle {
@@ -82,7 +82,7 @@ p {
   padding: 1rem 1.5rem;
   transition: 0.4s ease-in-out;
   margin-left: 1rem;
-  font-family: Candara, 'Segoe UI', Tahoma, sans-serif;
+  font-family: inherit;
 }
 
 .btn:hover {
