--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,6 +46,32 @@ p {
   color: black;
 }
 
+.faq {
+  text-align: center;
+}
+
+.faq-title {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+.q-cnt {
+  text-align: left;
+  padding: 2rem;
+}
+.p {
+  font-size: clamp(1rem, 2.2vw, 3rem);
+  color: rgb(255, 255, 255);
+  list-style-type: square;
+  margin: 1.8rem 0rem;
+}
+
+.q {
+  font-size: clamp(1rem, 2.2vw, 2.5rem);
+  color: rgb(199, 199, 199);
+}
+
 .main {
   display: flex;
   flex-direction: column;
