--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,14 +61,14 @@ p {
   padding: 2rem;
 }
 .p {
-  font-size: clamp(1rem, 2.2vw, 3rem);
+  font-size: clamp(1rem, 2.2vw, 1.6rem);
   color: rgb(255, 255, 255);
   list-style-type: square;
   margin: 1.8rem 0rem;
 }
 
 .q {
-  font-size: clamp(1rem, 2.2vw, 2.5rem);
+  font-size: clamp(1rem, 2.2vw, 1.6rem);
   color: rgb(199, 199, 199);
 }
 
@@ -128,5 +128,19 @@ model-viewer#reveal {
 @media screen and (max-width: 650px) {
   .title {
     line-height: 9rem;
+  }
+}
+
+@media screen and (min-width: 650px) {
+  .title {
+    line-height: 9rem;
+  }
+  .q-cnt {
+    text-align: center;
+    margin: 0rem 20vw;
+    list-style: none;
+  }
+  .p {
+    list-style-type: none;
   }
 }
