--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,10 @@
 .footer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 10rem;
+  height: 20rem;
   background-color: white;
   display: flex;
   justify-content: center;
