--- a/styles/globals.css
+++ b/styles/globals.css
@@ -161,3 +161,15 @@ model-viewer#reveal {
     list-style-type: none;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .title {
+    line-height: 8rem;
+  }
+}
+
+@media screen and (min-width: 950px) {
+  .title {
+    line-height: 14rem;
+  }
+}
